Movie Clip Editor: Prefetch frames doesn't seem to check what "input color space" option is selected. #37118

Closed
opened 2013-10-17 00:59:42 +02:00 by Lars Soderlind · 3 comments

%%%--- Operating System, Graphics card ---

Windows7 64bit

- Blender version with error, and version that worked ---

Error: blender-2.69-RC2-windows64

- Short description of error ---

First let me say that I have never had the need to change color space. I only stumbled across this while testing other stuff. So I don't know what the correct behavior should be like and if it differs with the files that need it. But it looks like a bug to me.

Prefetch frames doesn't seem to check what "input color space" option is selected.
Using an image-sequence will show this clearly. Using a movie clip on the other hand looks correct but I suspect that it reloads all the prefetched frames during first playback and it's hard to tell on a fast computer. Because if I test this on my old computer there is a slowdown on movie clips just like it's reloading all the frames.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open Blender.
Choose Motion Tracking layout.
Open an image-sequence.
Expand Footage Settings and under "Input Color Space" select a different one. XYZ for example. This should make the colors look different.
Press P or "Prefetch Frames" button.
Press Alt-A to playback and notice the prefetched frames looks like default color space.

%%%

%%%--- Operating System, Graphics card --- Windows7 64bit - Blender version with error, and version that worked --- Error: blender-2.69-RC2-windows64 - Short description of error --- First let me say that I have never had the need to change color space. I only stumbled across this while testing other stuff. So I don't know what the correct behavior should be like and if it differs with the files that need it. But it looks like a bug to me. Prefetch frames doesn't seem to check what "input color space" option is selected. Using an image-sequence will show this clearly. Using a movie clip on the other hand looks correct but I suspect that it reloads all the prefetched frames during first playback and it's hard to tell on a fast computer. Because if I test this on my old computer there is a slowdown on movie clips just like it's reloading all the frames. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open Blender. Choose Motion Tracking layout. Open an image-sequence. Expand Footage Settings and under "Input Color Space" select a different one. XYZ for example. This should make the colors look different. Press P or "Prefetch Frames" button. Press Alt-A to playback and notice the prefetched frames looks like default color space. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev60815. Thanks for the report, closing.%%%

%%%Fixed in svn rev60815. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37118
No description provided.