Fix #37118: MCEr: Prefetch frames doesn't respect input color space